--- a/Cat_and_dog_image_classifier.ipynb
+++ b/Cat_and_dog_image_classifier.ipynb
@@ -1223,8 +1223,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These results are pret"
+    "These results are pretty good."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
