--- a/Cat_and_dog_image_classifier.ipynb
+++ b/Cat_and_dog_image_classifier.ipynb
@@ -8,7 +8,7 @@
     "This project will be about building a model that can differentiate between cats and dogs in images. The data is from a [2013 Kaggle competition](https://www.kaggle.com/uysimty/keras-cnn-dog-or-cat-classification), and I got help creating the model using [this notebook](https://www.kaggle.com/uysimty/keras-cnn-dog-or-cat-classification).\n",
     "\n",
     "## Imports\n",
-    "We will need to import some libraries to get things started. Note the GPU configuration set-up here. While other models were considered, I ended up using Keras for its GPU support and easier use. (TFLearn was tried, but the latest update had an issue with the package that kept giving me errors.) The model was originally running on the CPU, but I was very concerened with the speed of the training. It was taking a very long time to train the model (3+ hours to get 15 epochs). Therefore, the project will instead run on my GPU in order to speed things up. The resulting change in computation time was very significant, as it can now run in 1-2 hours."
+    "We will need to import some libraries to get things started. Note the GPU configuration set-up here. While other models were considered, I ended up using Keras for its GPU support and easier use. (TFLearn was tried, but the latest update had an issue with the package that kept giving me errors.) The model was originally running on the CPU, but I was very concerened with the speed of the training. It was taking a very long time to train the model (3+ hours to get 15 epochs). Therefore, the project will instead run on my GPU in order to speed things up. The resulting change in computation time was very significant."
    ]
   },
   {
